test/modules/diten/usemodule/test_nested_use2.chpl
module OuterModule {
  module outermost {
    module middlemost {
      module innermost {
        proc f() {
          writeln("hello from innermost");
        }
      }
    }
  }

  proc main() {
    use outermost.middlemost.notinnermost;
  }
}
